ecmascript/parser/tests/test262-error-references/fail/829d9261aa6cd22c.js.stderr
error: Not a pattern
 --> $DIR/tests/test262-parser/fail/829d9261aa6cd22c.js:1:3
  |
1 | ([a.b]) => 0
  |   ^^^

